@@ -1,7 +1,5 @@
 /* { dg-additional-sources "test07_sep.upc" } */
-/* Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009,
-   2010, 2011, 2012
-   Free Software Foundation, Inc. 
+/* Copyright (C) 2001-2013 Free Software Foundation, Inc.
    This file is part of the UPC runtime library test suite.
    Written by Gary Funck <gary@intrepid.com>
    and Nenad Vukicevic <nenad@intrepid.com>
